refactor: chart divider 이미지 이름 변경 및 관련 로직 수정

--- a/android/app/src/main/res/layout/item_stadium_chart_bar.xml
+++ b/android/app/src/main/res/layout/item_stadium_chart_bar.xml
@@ -79,7 +79,7 @@
                 android:layout_height="match_parent"
                 android:importantForAccessibility="no"
                 android:scaleType="fitXY"
-                android:src="@drawable/chart_divider_trapezoid_left"
+                android:src="@drawable/img_chart_divider_trapezoid_left"
                 android:translationX="-5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_separate_point"
@@ -94,7 +94,7 @@
                 android:layout_height="match_parent"
                 android:importantForAccessibility="no"
                 android:scaleType="fitXY"
-                android:src="@drawable/chart_divider_trapezoid_right"
+                android:src="@drawable/img_chart_divider_trapezoid_right"
                 android:translationX="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_separate_point"
@@ -106,16 +106,17 @@
 
             <TextView
                 android:id="@+id/tv_vs_design"
-                style="@style/TextView.Pretendard.Bold.16"
+                style="@style/TextView.Pretendard.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_white_radius_100dp"
                 android:elevation="8dp"
                 android:includeFontPadding="false"
-                android:paddingHorizontal="12dp"
+                android:paddingHorizontal="10dp"
                 android:paddingVertical="4dp"
                 android:text="VS"
                 android:textColor="@color/gray700"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_separate_point"
                 app:layout_constraintStart_toStartOf="@id/guideline_separate_point"
@@ -132,7 +133,7 @@
                 android:includeFontPadding="false"
                 android:text="@{stadiumStatsUiModel.firstTeamStatus.teamName}"
                 android:textColor="@android:color/white"
-                android:textSize="22sp"
+                android:textSize="22dp"
                 app:layout_constraintBottom_toTopOf="@id/tv_first_team_percent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -141,12 +142,13 @@
 
             <TextView
                 android:id="@+id/tv_first_team_percent"
-                style="@style/TextView.Pretendard.Medium.16"
+                style="@style/TextView.Pretendard.Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.firstTeamStatus.percentage)}"
                 android:textColor="@android:color/white"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_first_team_name"
                 app:layout_constraintTop_toBottomOf="@id/tv_first_team_name"
@@ -163,7 +165,7 @@
                 android:includeFontPadding="false"
                 android:text="@{stadiumStatsUiModel.secondTeamStatus.teamName}"
                 android:textColor="@android:color/white"
-                android:textSize="22sp"
+                android:textSize="22dp"
                 app:layout_constraintBottom_toTopOf="@id/tv_second_team_percent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -172,12 +174,13 @@
 
             <TextView
                 android:id="@+id/tv_second_team_percent"
-                style="@style/TextView.Pretendard.Medium.16"
+                style="@style/TextView.Pretendard.Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.secondTeamStatus.percentage)}"
                 android:textColor="@android:color/white"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tv_second_team_name"
                 app:layout_constraintTop_toBottomOf="@id/tv_second_team_name"
