--- a/android/app/src/main/res/drawable/img_chart_divider_trapezoid_left.xml
+++ b/android/app/src/main/res/drawable/img_chart_divider_trapezoid_left.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="40">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/black"
         android:pathData="M30,0 L0,0 L0,40 L2,40 Z"/>
 </vector>
