--- a/android/app/src/main/res/drawable/img_chart_divider_trapezoid_right.xml
+++ b/android/app/src/main/res/drawable/img_chart_divider_trapezoid_right.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="40">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/black"
         android:pathData="M0,40 L30,40 L30,0 L28,0 Z"/>
 </vector>
