--- a/android/app/src/main/res/layout/item_stadium_chart_bar.xml
+++ b/android/app/src/main/res/layout/item_stadium_chart_bar.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:cardBackgroundColor="@android:color/white"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="12dp"
         app:cardElevation="10dp">
 
@@ -55,7 +55,7 @@
                 android:id="@+id/view_left_divider_background"
                 android:layout_width="29dp"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:translationX="-4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/iv_trapezoid_right_divider"
@@ -66,7 +66,7 @@
                 android:id="@+id/right_divider_background"
                 android:layout_width="29dp"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:translationX="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/iv_trapezoid_right_divider"
@@ -132,7 +132,7 @@
                 android:layout_marginBottom="4dp"
                 android:includeFontPadding="false"
                 android:text="@{stadiumStatsUiModel.firstTeamStatus.teamName}"
-                android:textColor="@android:color/white"
+                android:textColor="@color/white"
                 android:textSize="22dp"
                 app:layout_constraintBottom_toTopOf="@id/tv_first_team_percent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.firstTeamStatus.percentage)}"
-                android:textColor="@android:color/white"
+                android:textColor="@color/white"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_first_team_name"
@@ -164,7 +164,7 @@
                 android:layout_marginBottom="4dp"
                 android:includeFontPadding="false"
                 android:text="@{stadiumStatsUiModel.secondTeamStatus.teamName}"
-                android:textColor="@android:color/white"
+                android:textColor="@color/white"
                 android:textSize="22dp"
                 app:layout_constraintBottom_toTopOf="@id/tv_second_team_percent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.secondTeamStatus.percentage)}"
-                android:textColor="@android:color/white"
+                android:textColor="@color/white"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tv_second_team_name"
