--- a/android/app/src/main/res/layout/item_stadium_chart_bar.xml
+++ b/android/app/src/main/res/layout/item_stadium_chart_bar.xml
@@ -150,7 +150,7 @@
                 android:textColor="@color/white"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tv_first_team_name"
+                app:layout_constraintStart_toStartOf="@id/tv_first_team_name"
                 app:layout_constraintTop_toBottomOf="@id/tv_first_team_name"
                 tools:text="10.0%" />
 
