--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -29,6 +29,10 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="TextView.Pretendard.Medium.28" parent="TextView.Pretendard.Medium">
+        <item name="android:textSize">28sp</item>
+    </style>
+
     <style name="TextView.Pretendard.SemiBold" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_semibold</item>
         <item name="android:textColor">@color/black</item>
@@ -78,6 +82,10 @@
     <style name="TextView.Esamanru.Medium" parent="TextView.Esamanru">
         <item name="android:fontFamily">@font/esamanru_medium</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextView.Esamanru.Medium.14" parent="TextView.Esamanru.Medium">
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="TextView.Esamanru.Medium.24" parent="TextView.Esamanru.Medium">
