--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -6,7 +6,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="20dp"
         tools:context=".presentation.stats.attendance.AttendanceHistoryFragment">
+
+        <TextView
+            android:id="@+id/tv_attendance_history_title"
+            style="@style/TextView.Pretendard.Bold.20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stats_attendance_history_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_attendance_history_title" />
 
         <TextView
             style="@style/TextView.Pretendard.Medium"
