--- a/android/app/src/main/res/layout/item_livetalk_stadium.xml
+++ b/android/app/src/main/res/layout/item_livetalk_stadium.xml
@@ -73,7 +73,7 @@
             app:layout_constraintEnd_toStartOf="@id/tv_livetalk_vs_design"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_stadium_name"
-            tools:text="🐻" />
+            tools:text="\uD83D\uDC3B" />
 
         <TextView
             android:id="@+id/tv_home_team_nickname"
@@ -111,7 +111,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_livetalk_vs_design"
             app:layout_constraintTop_toTopOf="@+id/tv_home_team_emoji"
-            tools:text="🦸" />
+            tools:text="\uD83E\uDDB8" />
 
         <TextView
             android:id="@+id/tv_away_team_nickname"
