--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -22,7 +22,7 @@
             android:id="@+id/rv_attendance_history"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_attendance_history_title" />
 
@@ -35,10 +35,10 @@
             android:text="@string/stats_empty_attendance_history_description"
             android:textColor="@color/gray400"
             android:textSize="18sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
