--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -41,4 +41,7 @@
 
     <!-- Colors -->
     <color name="red">#FFFF2C2C</color>
+    <color name="gold">#FFC9B037</color>
+    <color name="silver">#FFB4B4B4</color>
+    <color name="bronze">#FFAD8A56</color>
 </resources>
