refactor: 안타, 피안타, 실책 문자열 리소스화

--- a/android/app/src/main/res/layout/fragment_my_stats.xml
+++ b/android/app/src/main/res/layout/fragment_my_stats.xml
@@ -389,7 +389,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
-                    android:text="안타"
+                    android:text="@string/stats_hit"
                     android:textColor="@color/gray500"
                     app:layout_constraintEnd_toEndOf="@id/tv_hit_count"
                     app:layout_constraintStart_toStartOf="@id/tv_hit_count"
@@ -423,7 +423,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
-                    android:text="피안타"
+                    android:text="@string/stats_hit_allowed"
                     android:textColor="@color/gray500"
                     app:layout_constraintEnd_toEndOf="@id/tv_hit_allowed_count"
                     app:layout_constraintStart_toStartOf="@id/tv_hit_allowed_count"
@@ -458,7 +458,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
-                    android:text="실책"
+                    android:text="@string/stats_error"
                     android:textColor="@color/gray500"
                     app:layout_constraintEnd_toEndOf="@id/tv_error_count"
                     app:layout_constraintStart_toStartOf="@id/tv_error_count"
