--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -88,6 +88,10 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="TextView.Esamanru.Medium.20" parent="TextView.Esamanru.Medium">
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="TextView.Esamanru.Medium.24" parent="TextView.Esamanru.Medium">
         <item name="android:textSize">24sp</item>
     </style>
