refactor: "확인"을 나타내는 문자열 string id 변경

--- a/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
@@ -70,7 +70,7 @@
             style="@style/TextView.Pretendard.Medium.16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/all_ok"
+            android:text="@string/all_confirm"
             android:textColor="@color/primary500"
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
             app:layout_constraintEnd_toEndOf="parent"
